fix spacing between items in menu section

--- a/style.css
+++ b/style.css
@@ -119,12 +119,12 @@ body{
 .section-menu{
     margin-bottom:5px;
     padding:10px 0;
-    width:100%;
+    /* width:100%; */
     box-shadow: 0px 0.5px 3px var(--color-grey);
     background-color:var(--color-white);
 }
 .items{
-    gap:50px;
+    gap:15px;
 }
 .item-container{
     display:flex;
@@ -132,6 +132,10 @@ body{
     gap:0px;
     justify-content: center;
     align-items: center;
+}
+.sim-item{
+    width:100px;
+    padding:0 5px;
 }
 .item-img{
     cursor:pointer;
